# hypertext

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: main.cpp
hypertext/: client.cpp  client.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  dispatch.cpp  dispatch.h  exceptions.h  hypertext.cpp  hypertext.h  main.test.cpp  method.cpp  method.h  method.test.cpp  methods.cpp  methods.test.cpp  request.h  response.h  serialization.cpp  serialization.h  serialization.test.cpp  status_code.h  version.cpp  version.h  version.test.cpp
hypertext/utils/: value.h
